[package]
name = "agentpass-anchor"
version = "0.1.0"
description = "AgentPass credential anchor program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentpass_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
